--- a/explore-meal-db/mealDB.html
+++ b/explore-meal-db/mealDB.html
@@ -27,8 +27,8 @@
 
   <!-- search your favourite food and share your meal with the name of Allah search Box -->
 
-  <div>
-    <div class="input-group mb-3 w-50 mx-auto bg-primary ">
+  <div class="">
+    <div class="input-group mb-5 w-50 mx-auto bg-primary ">
       <input id="search-field" type="text" class="form-control" placeholder="Search your food"
         aria-label="Recipient's username" aria-describedby="button-addon2">
       <button onclick="searchFood()" id="button-search" class="btn btn-outline-secondary text-light" type="button"
@@ -38,20 +38,8 @@
 
   <!--------------------------- cards section for food ------------------------------->
 
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div id="display-card" class="col">
-      <div class="card h-100">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
+  <div id="display-card" class="row row-cols-1 row-cols-md-3 g-4 ms-3 me-3">
+
   </div>
 
 
