--- a/Baaper-bank/banking.html
+++ b/Baaper-bank/banking.html
@@ -57,6 +57,7 @@
             </div>
         </section>
     </main>
+    <script src="js/functional.js"></script>
     <script src="js/banking.js"></script>
 </body>
 
