33-more api example start

--- a/API-examples/buddy.html
+++ b/API-examples/buddy.html
@@ -5,21 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kanye West</title>
-  <link rel="stylesheet" href="css/kanye.css">
+  <title>Buddy</title>
+  <link rel="stylesheet" href="./css/buddy.css">
 </head>
 
 <body>
   <h1>Allah is great</h1>
-  <div>
-    <blockquote id="quote">
-
-    </blockquote>
-    <button onclick="loadQuotes()">Quote</button>
+  <div id="buddies">
+ 
   </div>
+  <button onclick="loadBuddies()">CLick Me</button>
 
-
-  <script src="js/kanye.js"></script>
+  <script src="./js/buddy.js"></script>
 </body>
 
 </html>
